# libzbar

./: CMakeLists.txt  README.md  android.sh
toolchains/: IOS.cmake  MAC.cmake
zbar/: CMakeLists.txt  error.h  image.c
zbar/decoder/: CMakeLists.txt
zbar/libiconv-win/: CMakeLists.txt
zbar/libiconv-win/include/: config.h  iconv.h
zbar/libiconv-win/libiconv/: iconv.c  localcharset.c  localcharset.h
zbar/qrcode/: CMakeLists.txt
